whitespace-fix

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Poppins', sans-serif;
 
   color: #48494a;
-  background-image: url(../images/body-bg.jpg);
+  background:#fefefe
 }
 
 .layout_padding {
@@ -117,7 +117,7 @@ a:focus {
   width: 48%;
   height: 100%;
   background: url(../images/hero-bg.png);
-  background-size: cover;
+  background-size: 200;
   background-position: right bottom;
   background-repeat: no-repeat;
   z-index: -1;
@@ -276,7 +276,7 @@ a:focus {
 
   background-position: right;
 
-  background-size: 18%;
+  background-size: 0%;
 }
 
 .client_container {
@@ -442,3 +442,10 @@ a:focus {
 }
 
 /* end footer section*/
+html,body{
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
